[package]
name = "asndb"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[[bench]]
name = "general"
harness = false

[workspace]
members = [
    "service"
]

[dependencies]
byteorder = "1.5.0"
hashbrown = "0.12"
twox-hash = "2.1.0"
serde = { version = "*", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
debug = true
