[package]
name = "service"
version = "0.1.0"
edition = "2021"
default-run = "asndbd"

[[bin]]
name="asndbd"
path="./src/main.rs"

[dependencies]
asndb = { path = "../", features = ["serde"] }

hyper = { version = "1", features = ["http1", "server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.2"
femme = "2.2.1"
hyper-util = { version = "0.1.10", features = ["tokio"] }
bytes = "1.9.0"
log = "0.4.25"
